# -- Build system requirements (PEP 518) --

[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools>=61.0', 'wheel>=0.40.0']

# -- dependency groups --
[dependency-groups]
build = [
  "bump-my-version>=0.16.0",
  "pip>=22.1.1",
  "setuptools>=70.1.1",
  "wheel>=0.45.0",
  "pooch>=1.7.0"
]
dev = [
  {include-group = "build"},
  {include-group = "docs"},
  {include-group = "lint"},
  {include-group = "test"},
  {include-group = "typing"}
]
docs = [
  "esbonio>=0.16.0",
  "myst-parser>=4.0.0",
  "sphinx==7.3.7",
  "sphinx-math-dollar>=1.2.1",
  "sphinx-rtd-theme>=3.0.1",
  "sphinx-toolbox>=3.8.1",
  "TexSoup>=0.3.1"
]
lint = [
  "pre-commit>=4.0.1",
  "ruff>=0.8.0",
  "tach>=0.23.0",
  'validate-pyproject-schema-store[all]>=2025.06.13'
]
scripts = [
  "lazy-loader>=0.5",
  "packaging>=24.0",
  "pytest>=8.0.1",
  "pyyaml>=6.0",
  "rich>=13.0.0",
  "typer>=0.15",
  "f90nml>=1.5",
  {include-group = "build"}
]
test = [
  # workspace members
  "icon4py-testing~=0.2.0",
  # external dependencies
  "coverage[toml]>=7.5.0",
  "nox>=2025.5.1",
  "pytest>=8.0.1",
  "pytest-benchmark>=5.0.0",
  "pytest-cache>=1.0",
  "pytest-cov>=5.0.0",
  "pytest-factoryboy>=2.6.1",
  "pytest-mpi>=0.6",
  "pytest-unused-fixtures>=0.2.0",
  "pytest-xdist[psutil]>=3.5.0"
]
typing = [
  "mypy[faster-cache]>=1.13.0",
  "typing-extensions>=4.11.0",
  "types-cffi>=1.16.0",
  "scipy-stubs>=1.15.3.0"
]
typing-distributed = ["mpi4py>=3.1.5", "pymetis>2022.1"]

# -- Standard project description options (PEP 621) --
[project]
authors = [{email = "gridtools@cscs.ch", name = "ETH Zurich"}]
classifiers = [
  'Development Status :: 4 - Beta',
  'Intended Audience :: Science/Research',
  'License :: OSI Approved :: BSD License',
  'Operating System :: POSIX',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.13',
  'Programming Language :: Python :: 3.14',
  'Programming Language :: Python :: Implementation :: CPython',
  'Topic :: Scientific/Engineering :: Atmospheric Science',
  'Topic :: Scientific/Engineering :: Mathematics',
  'Topic :: Scientific/Engineering :: Physics'
]
dependencies = [
  "icon4py-atmosphere-advection~=0.2.0",
  "icon4py-atmosphere-diffusion~=0.2.0",
  "icon4py-atmosphere-dycore~=0.2.0",
  "icon4py-atmosphere-microphysics~=0.2.0",
  "icon4py-atmosphere-muphys~=0.2.0",
  "icon4py-common~=0.2.0",
  "icon4py-driver~=0.2.0",
  "icon4py-standalone_driver~=0.2.0"
]
description = 'ICON model in Python.'
license = {text = "BSD-3 License"}
name = "icon4py"
readme = "README.md"
requires-python = ">=3.10"
# managed by bump-my-version:
version = "0.2.0"

[project.optional-dependencies]
all = ["icon4py[distributed,fortran,io,testing,profiling]"]
cuda12 = ["icon4py-common[cuda12]"]
cuda13 = ["icon4py-common[cuda13]"]
distributed = ["icon4py-common[distributed]"]
fortran = ["icon4py-bindings~=0.2.0"]
io = ["icon4py-common[io]"]
profiling = ['viztracer>=1.1.0']
rocm7 = ["icon4py-common[rocm7]"]
testing = ["icon4py-testing"]

[project.urls]
Homepage = 'https://github.com/C2SM/icon4py'

# -- bumpversion --
[tool.bumpversion]
allow_dirty = false
commit = false
current_version = "0.2.0"
ignore_missing_version = false
message = 'Bump icon4py version: {current_version} → {new_version}'
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(?:(?P<pre_l>a|b|rc)(?P<pre_n>\\d+))?"
serialize = ["{major}.{minor}.{patch}{pre_l}{pre_n}", "{major}.{minor}.{patch}"]
tag = false

[[tool.bumpversion.files]]
filename = "pyproject.toml"
replace = '''
# managed by bump-my-version:
version = "{new_version}"
'''
search = '''
# managed by bump-my-version:
version = "{current_version}"
'''

# -- mypy --
[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_defs = true
explicit_package_bases = true
files = [
  # TODO(egparedes): activate for all sources and tests
  '$MYPY_CONFIG_FILE_DIR/model/atmosphere/advection/src',
  # '$MYPY_CONFIG_FILE_DIR/model/atmosphere/advection/tests',
  '$MYPY_CONFIG_FILE_DIR/model/atmosphere/diffusion/src',
  # '$MYPY_CONFIG_FILE_DIR/model/atmosphere/diffusion/tests',
  '$MYPY_CONFIG_FILE_DIR/model/atmosphere/dycore/src',
  '$MYPY_CONFIG_FILE_DIR/model/atmosphere/dycore/tests/',
  # '$MYPY_CONFIG_FILE_DIR/model/atmosphere/subgrid_scale_physics/microphysics/src',
  '$MYPY_CONFIG_FILE_DIR/model/atmosphere/subgrid_scale_physics/microphysics/src/icon4py/model/atmosphere/subgrid_scale_physics/microphysics/__init__.py',
  '$MYPY_CONFIG_FILE_DIR/model/atmosphere/subgrid_scale_physics/microphysics/src/icon4py/model/atmosphere/subgrid_scale_physics/microphysics/microphysics_options.py',
  '$MYPY_CONFIG_FILE_DIR/model/atmosphere/subgrid_scale_physics/microphysics/src/icon4py/model/atmosphere/subgrid_scale_physics/microphysics/microphysics_constants.py',
  '$MYPY_CONFIG_FILE_DIR/model/atmosphere/subgrid_scale_physics/microphysics/src/icon4py/model/atmosphere/subgrid_scale_physics/microphysics/stencils/__init__.py',
  '$MYPY_CONFIG_FILE_DIR/model/atmosphere/subgrid_scale_physics/microphysics/src/icon4py/model/atmosphere/subgrid_scale_physics/microphysics/stencils/microphysical_processes.py',
  '$MYPY_CONFIG_FILE_DIR/model/atmosphere/subgrid_scale_physics/microphysics/src/icon4py/model/atmosphere/subgrid_scale_physics/microphysics/stencils/saturation_adjustment_stencils.py',
  '$MYPY_CONFIG_FILE_DIR/model/atmosphere/subgrid_scale_physics/microphysics/src/icon4py/model/atmosphere/subgrid_scale_physics/microphysics/stencils/graupel_stencils.py',
  '$MYPY_CONFIG_FILE_DIR/model/atmosphere/subgrid_scale_physics/microphysics/src/icon4py/model/atmosphere/subgrid_scale_physics/microphysics/saturation_adjustment.py',
  '$MYPY_CONFIG_FILE_DIR/model/atmosphere/subgrid_scale_physics/microphysics/src/icon4py/model/atmosphere/subgrid_scale_physics/microphysics/single_moment_six_class_gscp_graupel.py',
  # '$MYPY_CONFIG_FILE_DIR/model/atmosphere/subgrid_scale_physics/microphysics/tests',
  '$MYPY_CONFIG_FILE_DIR/model/atmosphere/subgrid_scale_physics/microphysics/tests/__init__.py',
  '$MYPY_CONFIG_FILE_DIR/model/atmosphere/subgrid_scale_physics/microphysics/tests/microphysics/__init__.py',
  '$MYPY_CONFIG_FILE_DIR/model/atmosphere/subgrid_scale_physics/microphysics/tests/microphysics/conftest.py',
  '$MYPY_CONFIG_FILE_DIR/model/atmosphere/subgrid_scale_physics/microphysics/tests/microphysics/fixtures.py',
  '$MYPY_CONFIG_FILE_DIR/model/atmosphere/subgrid_scale_physics/microphysics/tests/microphysics/integration_tests/__init__.py',
  '$MYPY_CONFIG_FILE_DIR/model/atmosphere/subgrid_scale_physics/microphysics/tests/microphysics/integration_tests/test_saturation_adjustment.py',
  '$MYPY_CONFIG_FILE_DIR/model/atmosphere/subgrid_scale_physics/microphysics/tests/microphysics/integration_tests/test_single_moment_six_class_gscp_graupel.py',
  # '$MYPY_CONFIG_FILE_DIR/model/atmosphere/subgrid_scale_physics/muphys/src',
  '$MYPY_CONFIG_FILE_DIR/model/atmosphere/subgrid_scale_physics/muphys/src/icon4py/model/atmosphere/subgrid_scale_physics/muphys/__init__.py',
  '$MYPY_CONFIG_FILE_DIR/model/atmosphere/subgrid_scale_physics/muphys/src/icon4py/model/atmosphere/subgrid_scale_physics/muphys/core/common/constants.py',
  '$MYPY_CONFIG_FILE_DIR/model/atmosphere/subgrid_scale_physics/muphys/src/icon4py/model/atmosphere/subgrid_scale_physics/muphys/core/definitions.py',
  '$MYPY_CONFIG_FILE_DIR/model/atmosphere/subgrid_scale_physics/muphys/src/icon4py/model/atmosphere/subgrid_scale_physics/muphys/core/properties.py',
  '$MYPY_CONFIG_FILE_DIR/model/atmosphere/subgrid_scale_physics/muphys/src/icon4py/model/atmosphere/subgrid_scale_physics/muphys/core/saturation_adjustment.py',
  '$MYPY_CONFIG_FILE_DIR/model/atmosphere/subgrid_scale_physics/muphys/src/icon4py/model/atmosphere/subgrid_scale_physics/muphys/core/thermo.py',
  '$MYPY_CONFIG_FILE_DIR/model/atmosphere/subgrid_scale_physics/muphys/src/icon4py/model/atmosphere/subgrid_scale_physics/muphys/core/transitions.py',
  '$MYPY_CONFIG_FILE_DIR/model/atmosphere/subgrid_scale_physics/muphys/src/icon4py/model/atmosphere/subgrid_scale_physics/muphys/driver/__init__.py',
  '$MYPY_CONFIG_FILE_DIR/model/atmosphere/subgrid_scale_physics/muphys/src/icon4py/model/atmosphere/subgrid_scale_physics/muphys/driver/common.py',
  '$MYPY_CONFIG_FILE_DIR/model/atmosphere/subgrid_scale_physics/muphys/src/icon4py/model/atmosphere/subgrid_scale_physics/muphys/driver/run_full_muphys.py',
  '$MYPY_CONFIG_FILE_DIR/model/atmosphere/subgrid_scale_physics/muphys/src/icon4py/model/atmosphere/subgrid_scale_physics/muphys/driver/run_graupel_only.py',
  '$MYPY_CONFIG_FILE_DIR/model/atmosphere/subgrid_scale_physics/muphys/src/icon4py/model/atmosphere/subgrid_scale_physics/muphys/driver/utils.py',
  '$MYPY_CONFIG_FILE_DIR/model/atmosphere/subgrid_scale_physics/muphys/src/icon4py/model/atmosphere/subgrid_scale_physics/muphys/implementations/graupel.py',
  '$MYPY_CONFIG_FILE_DIR/model/atmosphere/subgrid_scale_physics/muphys/src/icon4py/model/atmosphere/subgrid_scale_physics/muphys/implementations/graupel_dace_hooks.py',
  '$MYPY_CONFIG_FILE_DIR/model/atmosphere/subgrid_scale_physics/muphys/src/icon4py/model/atmosphere/subgrid_scale_physics/muphys/implementations/muphys.py',
  # '$MYPY_CONFIG_FILE_DIR/model/atmosphere/subgrid_scale_physics/muphys/tests',
  # '$MYPY_CONFIG_FILE_DIR/model/common/src/',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/type_alias.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/dimension.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/exceptions.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/model_backends.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/constants.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/field_type_aliases.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/states/utils.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/metrics/compute_zdiff_gradp.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/grid/horizontal.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/states/model.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/model_options.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/grid/gridfile.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/thermodynamic_functions.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/states/tracer_state.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/states/metadata.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/states/data.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/metrics/metrics_attributes.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/math/stencils/cell_horizontal_gradients_by_green_gauss_method.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/math/vector_operations.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/math/utils.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/math/operators.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/math/vertical_operations.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/math/smagorinsky.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/math/gradient.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/math/derivative.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/interpolation/stencils/mo_intp_rbf_rbf_vec_interpol_vertex.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/interpolation/stencils/mo_intp_rbf_rbf_vec_interpol_cell.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/interpolation/stencils/interpolate_to_cell_center.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/interpolation/stencils/interpolate_edge_field_to_half_levels_vp.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/interpolation/stencils/interpolate_cell_field_to_half_levels_wp.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/interpolation/stencils/interpolate_cell_field_to_half_levels_vp.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/interpolation/stencils/edge_2_cell_vector_rbf_interpolation.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/interpolation/stencils/compute_nudgecoeffs.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/interpolation/stencils/compute_cell_2_vertex_interpolation.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/interpolation/stencils/cell_2_edge_interpolation.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/interpolation/interpolation_attributes.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/grid/utils.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/grid/states.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/grid/grid_refinement.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/grid/geometry_attributes.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/grid/base.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/external_parameters.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/diagnostic_calculations/stencils/diagnose_temperature.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/diagnostic_calculations/stencils/diagnose_surface_pressure.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/diagnostic_calculations/stencils/diagnose_pressure.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/diagnostic_calculations/stencils/calculate_tendency.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/grid/geometry_config.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/math/projection.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/math/stencils/generic_math_operations_array_ns.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/metrics/compute_coeff_gradekin.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/metrics/compute_diffusion_metrics.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/diagnostic_calculations/pressure.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/grid/icon.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/grid/vertical.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/math/coordinate_transformations.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/math/distance.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/math/stencils/compute_nabla2_on_cell.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/math/stencils/compute_nabla2_on_cell_k.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/math/stencils/generic_math_operations.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/metrics/compute_weight_factors.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/metrics/metric_fields.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/metrics/reference_atmosphere.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/grid/geometry_stencils.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/grid/grid_manager.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/grid/simple.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/interpolation/rbf_interpolation.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/states/diagnostic_state.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/states/factory.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/states/prognostic_state.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/grid/geometry.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/interpolation/interpolation_fields.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/interpolation/interpolation_factory.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/metrics/metrics_factory.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/utils/',
  # '$MYPY_CONFIG_FILE_DIR/model/common/tests/',
  '$MYPY_CONFIG_FILE_DIR/model/common/tests/common/config/unit_tests/test_options.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/tests/common/grid',
  '$MYPY_CONFIG_FILE_DIR/model/common/tests/common/metrics',
  '$MYPY_CONFIG_FILE_DIR/model/common/tests/common/states',
  '$MYPY_CONFIG_FILE_DIR/model/common/tests/common/math',
  '$MYPY_CONFIG_FILE_DIR/model/common/tests/common/interpolation',
  '$MYPY_CONFIG_FILE_DIR/model/common/tests/common/io/unit_tests/test_io.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/config',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/decomposition',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/io',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/components',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/metrics/compute_advection_metrics.py',
  '$MYPY_CONFIG_FILE_DIR/model/common/src/icon4py/model/common/topography',
  # '$MYPY_CONFIG_FILE_DIR/model/driver/src/',
  '$MYPY_CONFIG_FILE_DIR/model/driver/src/icon4py/model/driver/__init__.py',
  '$MYPY_CONFIG_FILE_DIR/model/driver/src/icon4py/model/driver/testcases/__init__.py',
  '$MYPY_CONFIG_FILE_DIR/model/driver/src/icon4py/model/driver/testcases/utils.py',
  '$MYPY_CONFIG_FILE_DIR/model/driver/src/icon4py/model/driver/testcases/gauss3d.py',
  '$MYPY_CONFIG_FILE_DIR/model/driver/src/icon4py/model/driver/testcases/jablonowski_williamson.py',
  '$MYPY_CONFIG_FILE_DIR/model/driver/src/icon4py/model/driver/initialization_utils.py',
  '$MYPY_CONFIG_FILE_DIR/model/driver/src/icon4py/model/driver/icon4py_configuration.py',
  '$MYPY_CONFIG_FILE_DIR/model/driver/src/icon4py/model/driver/icon4py_driver.py',
  '$MYPY_CONFIG_FILE_DIR/model/driver/tests/__init__.py',
  '$MYPY_CONFIG_FILE_DIR/model/driver/tests/driver/__init__.py',
  '$MYPY_CONFIG_FILE_DIR/model/driver/tests/driver/integration_tests/__init__.py',
  '$MYPY_CONFIG_FILE_DIR/model/driver/tests/driver/unit_tests/__init__.py',
  '$MYPY_CONFIG_FILE_DIR/model/driver/tests/driver/conftest.py',
  '$MYPY_CONFIG_FILE_DIR/model/driver/tests/driver/fixtures.py',
  '$MYPY_CONFIG_FILE_DIR/model/driver/tests/driver/unit_tests/test_utils.py',
  '$MYPY_CONFIG_FILE_DIR/model/driver/tests/driver/integration_tests/test_gauss3d.py',
  '$MYPY_CONFIG_FILE_DIR/model/driver/tests/driver/integration_tests/test_jablonowski_williamson.py',
  '$MYPY_CONFIG_FILE_DIR/model/driver/tests/driver/integration_tests/test_icon4py.py',
  '$MYPY_CONFIG_FILE_DIR/model/testing/src/',
  # '$MYPY_CONFIG_FILE_DIR/model/testing/tests/',
  '$MYPY_CONFIG_FILE_DIR/tools/src/',
  '$MYPY_CONFIG_FILE_DIR/bindings/src/',
  '$MYPY_CONFIG_FILE_DIR/model/standalone_driver/src',
  '$MYPY_CONFIG_FILE_DIR/model/standalone_driver/tests'
]
ignore_missing_imports = false
implicit_reexport = true
mypy_path = '''
$MYPY_CONFIG_FILE_DIR/model/atmosphere/advection/src:
$MYPY_CONFIG_FILE_DIR/model/atmosphere/diffusion/src:
$MYPY_CONFIG_FILE_DIR/model/atmosphere/dycore/src:
$MYPY_CONFIG_FILE_DIR/model/atmosphere/subgrid_scale_physics/microphysics/src:
$MYPY_CONFIG_FILE_DIR/model/atmosphere/subgrid_scale_physics/muphys/src:
$MYPY_CONFIG_FILE_DIR/model/common/src:
$MYPY_CONFIG_FILE_DIR/model/driver/src:
$MYPY_CONFIG_FILE_DIR/model/standalone_driver/src:
$MYPY_CONFIG_FILE_DIR/model/standalone_driver/tests:
$MYPY_CONFIG_FILE_DIR/model/testing/src:
$MYPY_CONFIG_FILE_DIR/tools/src:
$MYPY_CONFIG_FILE_DIR/bindings/src:
'''
namespace_packages = true
plugins = ["gt4py.next.type_system.mypy_plugin", "icon4py.model.common.type_system.mypy_plugin"]
# install_types = true
# non_interactive = true
show_column_numbers = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
disable_error_code = ["attr-defined"]
module = ['*.stencil_tests.*', '*.unit_tests.*']

[[tool.mypy.overrides]]
ignore_errors = true
module = [
  'icon4py.model.testing.pytest_hooks',
  'icon4py.model.testing.serialbox',
  'icon4py.bindings.diffusion_wrapper',  # TODO(ricoh): replace bare ints with proper enum values, fix or ignore the rest (< 10)
  'icon4py.bindings.dycore_wrapper',  # TODO(ricoh): replace bare ints with proper enum values, fix or ignore the rest (< 10)
  'icon4py.bindings.grid_wrapper',
  'icon4py.bindings.muphys_wrapper'
]

[[tool.mypy.overrides]]  # complains about assigning to indices of NDArrayObject
disable_error_code = ["index", "misc"]
module = [
  "icon4py.model.standalone_driver.initial_condition.*"
]

[[tool.mypy.overrides]]
# GT4Py/numpy typing incompatibilities: NDArrayObject Protocol mismatch, Field
# shape attr, dtype type-var. Cannot be fixed in user code.
disable_error_code = ["arg-type", "attr-defined", "misc", "type-var", "assignment"]
module = [
  "icon4py.model.atmosphere.subgrid_scale_physics.muphys.driver.common"
]

[[tool.mypy.overrides]]
# dace has no type stubs.
disable_error_code = ["import-untyped"]
module = [
  "icon4py.model.atmosphere.subgrid_scale_physics.muphys.implementations.graupel_dace_hooks"
]

# -- pytest --
[tool.pytest]

[tool.pytest.ini_options]
addopts = ['-p icon4py.model.testing.pytest_hooks', '--strict-markers']
markers = [
  "embedded_remap_error",
  "embedded_static_args",
  "skip_value_error",
  "datatest",
  "embedded_only",
  "uses_concat_where",
  "cpu_only",
  "infinite_concat_where",
  "gtfn_too_slow",
  "continuous_benchmarking",
  "benchmark_only: benchmark only tests without verification"
]
# add all namespace packages to pythonpath to make them available for pytest
pythonpath = [
  "bindings",
  "model/atmosphere/advection",
  "model/atmosphere/diffusion",
  "model/atmosphere/dycore",
  "model/atmosphere/subgrid_scale_physics/microphysics",
  "model/atmosphere/subgrid_scale_physics/muphys",
  "model/common",
  "model/driver",
  "model/standalone_driver",
  "model/testing",
  "tools"
]

# -- ruff --
[tool.ruff]
line-length = 100
respect-gitignore = true
show-fixes = true
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
# -- Rules set to be considered --
explicit-preview-rules = true
ignore = [
  'E501',  # [line-too-long]
  'B905',  # [zip-without-explicit-strict]  # TODO(egparedes): activate when possible
  'PLR0913',  # [too-many-arguments]  # TODO(egparedes): activate when possible
  'PLR2004',  # [magic-value-comparison]  # TODO(egparedes): activate when possible
  'PLR5501',  # [collapsible-else-if]  # TODO(egparedes): rediscuss in future
  'SIM102',  # [collapsible-if]  # TODO(egparedes): rediscuss in future
  'TD003'  # [missing-todo-link]
]
preview = true  # use only with explicit-preview-rules=true
select = [
  'A',  # flake8-builtins
  'B',  # flake8-bugbear
  # 'C4', #  flake8-comprehensions
  'CPY',  # flake8-copyright
  # 'D', #  pydocstyle
  'DOC',  # pydoclint
  'E',  # pycodestyle
  'ERA',  # eradicate
  'F',  # Pyflakes
  'F822',  # [undefined-export] (preview)  # TODO(egparedes): remove when not longer in preview
  'FA100',  # future-rewritable-type-annotation
  # 'FBT',  # flake8-boolean-trap
  'FLY',  # flynt
  'I',  # isort
  # 'ICN',  # flake8-import-conventions
  'ISC',  # flake8-implicit-str-concat
  # 'N',  # pep8-naming
  'NPY',  # NumPy-specific rules
  'PERF',  # Perflint
  'PGH',  # pygrep-hooks
  'PLC',  # Pylint-Convention
  'PLE',  # Pylint-Error
  'PLR',  # Pylint-Refactor
  'PLR0917',  # [too-many-positional-arguments]  # TODO(egparedes): remove when not longer in preview
  'PLW',  # Pylint-Warning
  'PTH',  # flake8-use-pathlib
  'Q',  # flake8-quotes
  'RUF',  # Ruff-specific rules
  'SIM',  # flake8-simplify
  'T10',  # flake8-debugger
  'TD',  # flake8-todos
  'UP',  # pyupgrade
  'W605',  # invalid-escape-sequence
  'YTT'  # flake8-2020
]
typing-modules = ['gt4py.eve.extended_typing']
unfixable = []

[tool.ruff.lint.flake8-bugbear]
# DeltaT / NumTimeSteps are aliases of immutable types (timedelta / int), so calling them
# in argument or dataclass defaults is safe (B008, RUF009).
extend-immutable-calls = [
  "icon4py.model.common.io.io.DeltaT",
  "icon4py.model.common.io.io.NumTimeSteps"
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ['icon4py']
known-third-party = ['gt4py', 'packaging', 'setuptools']
lines-after-imports = 2
order-by-type = true
section-order = [
  'future',
  'standard-library',
  'third-party',
  'first-party',
  'tests',
  'local-folder'
]
split-on-trailing-comma = false

[tool.ruff.lint.isort.sections]
'tests' = ['tests']

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
# Avoid messing up conditions in gt4py stencils (SIM300)
# Stencil parameters referenced in domain specs must remain positional (PLR0917)
"**/model/**/stencils/*.py" = ["SIM300", "PLR0917"]
# Ignore spurious errors when explicitly importing fixtures in tests (F401, F811).
# Check: https://github.com/astral-sh/ruff/issues/10662
# TODO(havogt): fix error related to PLR0915, PLR0911, TD, RUF012 and remove ignores below
"**/tests/**/*_test.py" = ["F401", "F811", "PLR0915", "PLR0911", "TD", "RUF012"]
"**/tests/**/conftest.py" = ["F401", "F811"]
"**/tests/**/fixtures.py" = [
  "F401",
  "F811",
  "PLR0915",
  "PLR0911",
  "TD",
  "RUF012"
]
"**/tests/**/test_*.py" = ["F401", "F811", "PLR0915", "PLR0911", "TD", "RUF012"]

[tool.ruff.lint.pylint]
max-branches = 12
max-positional-args = 5
max-statements = 60

# -- setuptools --
[tool.setuptools]
packages = []

# -- uv: packages & workspace --
[tool.uv]
conflicts = [[{extra = "cuda12"}, {extra = "cuda13"}, {extra = "rocm7"}]]

[[tool.uv.index]]
explicit = true
name = "test.pypi"
url = "https://test.pypi.org/simple/"

[[tool.uv.index]]
explicit = true
name = 'gridtools'
url = 'https://gridtools.github.io/pypi/'

[tool.uv.sources]
# dace = {index = "gridtools"}
# gt4py = {git = "https://github.com/GridTools/gt4py", branch = "main"}
# gt4py = {index = "test.pypi"}
icon4py-atmosphere-advection = {workspace = true}
icon4py-atmosphere-diffusion = {workspace = true}
icon4py-atmosphere-dycore = {workspace = true}
icon4py-atmosphere-microphysics = {workspace = true}
icon4py-atmosphere-muphys = {workspace = true}
icon4py-bindings = {workspace = true}
icon4py-common = {workspace = true}
icon4py-driver = {workspace = true}
icon4py-standalone_driver = {workspace = true}
icon4py-testing = {workspace = true}
icon4py-tools = {workspace = true}

[tool.uv.workspace]
members = [
  "bindings",
  "model/atmosphere/advection",
  "model/atmosphere/diffusion",
  "model/atmosphere/dycore",
  "model/atmosphere/subgrid_scale_physics/microphysics",
  "model/atmosphere/subgrid_scale_physics/muphys",
  "model/common",
  "model/driver",
  "model/standalone_driver",
  "model/testing",
  "tools"
]
