# This file is mainly used to configure package creation with setuptools.
# Documentation:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
#
# Additionally, it stores settings of other development tools (linters, type checkers, etc..

[metadata]
name = icon4py-atm_phy_schemes
author = ETH Zurich
author_email = info@c2sm.ethz.ch
description = Icon inspired code in Python and GT4Py
license = gpl3
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/C2SM/icon4py
project_urls =
    Source Code = https://github.com/C2SM/icon4py

platforms = Linux, Mac

# From: https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Atmospheric Science
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
packages = find_namespace:
package_dir =
    = src

include_package_data = True
python_requires = >= 3.10
install_requires =
    icon4py-common

[options.packages.find]
where = src
exclude =
    tests
